--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/css/global.css" />
+    <link rel="stylesheet" href="public/assets/css/global.css" />
 
     <!-- Google Fonts -->
     <!-- Open Sans -->
@@ -59,7 +59,7 @@
           </p>
         </div>
         <div class="c-section__image-container">
-          <img src="assets/images/section-image-1.svg" alt="banner" />
+          <img src="public/assets/images/section-image-1.svg" alt="banner" />
         </div>
       </section>
       <section class="c-section">
@@ -72,7 +72,7 @@
           </p>
         </div>
         <div class="c-section__image-container">
-          <img src="assets/images/section-image-2.svg" alt="banner" />
+          <img src="public/assets/images/section-image-2.svg" alt="banner" />
         </div>
       </section>
       <section class="c-section">
@@ -85,7 +85,7 @@
           </p>
         </div>
         <div class="c-section__image-container">
-          <img src="assets/images/section-image-3.svg" alt="banner" />
+          <img src="public/assets/images/section-image-3.svg" alt="banner" />
         </div>
       </section>
       <section class="c-section">
@@ -99,12 +99,12 @@
           </p>
         </div>
         <div class="c-section__image-container">
-          <img src="assets/images/section-image-4.svg" alt="banner" />
+          <img src="public/assets/images/section-image-4.svg" alt="banner" />
         </div>
       </section>
     </main>
     <footer class="c-footer">
-      <img src="assets/images/logo.svg" alt="Discord" />
+      <img src="public/assets/images/logo.svg" alt="Discord" />
     </footer>
   </body>
 </html>
